--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -129,7 +129,6 @@ allow 139.99.8.57;
 allow 141.98.11.62;
 allow 143.20.64.235;
 allow 144.126.133.74;
-allow 144.172.73.31;
 allow 144.31.188.82;
 allow 146.59.126.232;
 allow 146.59.231.4;
@@ -593,12 +592,6 @@ allow 195.47.238.176;
 allow 195.47.238.177;
 allow 195.47.238.178;
 allow 195.47.238.44;
-allow 195.47.238.82;
-allow 195.47.238.83;
-allow 195.47.238.84;
-allow 195.47.238.86;
-allow 195.47.238.87;
-allow 195.47.238.88;
 allow 195.47.238.90;
 allow 195.47.238.91;
 allow 195.47.238.92;
@@ -648,7 +641,6 @@ allow 2001:41d0:601:1100::6f85;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
-allow 2001:41d0:720:e300:25::;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
@@ -891,6 +883,7 @@ allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.105.248;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.113;
 allow 23.137.253.254;
 allow 23.137.253.27;
@@ -911,7 +904,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -919,14 +911,6 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
-allow 23.191.200.28;
-allow 23.191.200.29;
-allow 23.191.200.3;
-allow 23.191.200.30;
-allow 23.191.200.31;
-allow 23.191.200.4;
-allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -974,6 +958,7 @@ allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1235,6 +1220,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1426,13 +1412,7 @@ allow 2a0c:4d00:2:8::2;
 allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
-allow 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
-allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
-allow 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
-allow 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
-allow 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
-allow 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 allow 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
 allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
@@ -1467,6 +1447,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:127;
 allow 2a0e:4005:1002:ffff:185:40:4:132;
 allow 2a0e:4005:1002:ffff:185:40:4:143;
 allow 2a0e:4005:1002:ffff:185:40:4:149;
+allow 2a0e:4005:1002:ffff:185:40:4:20;
 allow 2a0e:4005:1002:ffff:185:40:4:22;
 allow 2a0e:4005:1002:ffff:185:40:4:29;
 allow 2a0e:4005:1002:ffff:185:40:4:38;
@@ -1754,6 +1735,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
