--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -129,6 +129,7 @@ allow 139.99.8.57;
 allow 141.98.11.62;
 allow 143.20.64.235;
 allow 144.126.133.74;
+allow 144.172.73.31;
 allow 144.31.188.82;
 allow 146.59.126.232;
 allow 146.59.231.4;
@@ -795,6 +796,7 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
+allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -802,6 +804,14 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
+allow 23.191.200.28;
+allow 23.191.200.29;
+allow 23.191.200.3;
+allow 23.191.200.30;
+allow 23.191.200.31;
+allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
